# Alter-Native

./: .gitignore  .gitmodules  .travis.yml  AlterNative.Core.sln  AlterNative.psess  AlterNative.sln  AlterNative1.psess  AlterNative130530(1).vsp  AlterNative130530(2).vsp  AlterNative130530(3).vsp  AlterNative130530(4).vsp  AlterNative130530(5).vsp  AlterNative130530.vsp  DockerAlternative.sh  DockerInitScript.sh  Dockerfile  README.md  README.txt  alternative-compile.sh  alternative-init.bat  alternative-init.sh  alternative-travis-init.sh  alternative.core-compile.sh  app.js  index.html  install.bat  install.sh  jenkins.sh  main.cpp  package.json  params.json  test.cs
AlterNative/: AlterNative.Core.csproj  AlterNative.csproj  Commands.cs  Program.cs  packages.config
AlterNative.Core/: AlterNative.Core.sln
AlterNative.Tools/: AlterNative.Tools.Core.csproj  AlterNative.Tools.csproj  packages.config
ICSharpCode.Decompiler/: FileTextOutput.cs  ICSharpCode.Decompiler.Core.csproj  ICSharpCode.Decompiler.csproj
ILSpy/: App.xaml  AssemblyList.cs  ClassDiagram1.cd  DecompilationOptions.cs  FileTextOutput.cs  ILSpy.Core.csproj  ILSpy.csproj  LoadedAssembly.cs  MainWindow.cs  MainWindow.xaml  MainWindow.xaml.cs  README.txt  SearchPane.cs  app.config
ILSpy.SharpDevelop.LGPL/: ILSpy.SharpDevelop.LGPL.csproj
Lib/System/: Array.h  Boxing.h  CMakeLists.txt  Console.cpp  Console.h  Convert.cpp  Convert.h  Exception.cpp  Exception.h  GC.h  IDisposable.h  Math.cpp  Math.h  Object.cpp  Object.h  String.cpp  String.h  System.h  asis.h  support.h
Lib/System/Collections/: CMakeLists.txt  IEnumerable.h  IEnumeratorCXX.h  IteratorCXX.h  List.h
Lib/System/Collections/Generic/: IEnumerable.h  IEnumeratorCXX.h  IteratorCXX.h  List.h  MyIterator.h
Lib/System/IO/: File.cpp  File.h  FileAccess.h  FileMode.h  FileOptions.h  FileStream.cpp  FileStream.h  Stream.cpp  Stream.h  StreamReaderCXX.cpp  StreamReaderCXX.h  StreamWriterCXX.cpp  StreamWriterCXX.h  TextReader.cpp  TextReader.h  TextWriter.cpp  TextWriter.h
Lib/System/Text/: StringBuilder.cpp  StringBuilder.h  UTF8Encoding.cpp  UTF8Encoding.h
Lib/System/constraints/: constraintsSupport.h
Lib/System/exceptions/: SystemException.cpp  SystemException.h  exceptionSupport.h
Lib/System/exceptions/systemException/: ArgumentException.cpp  ArgumentException.h  NotImplementedException.cpp  NotImplementedException.h
Lib/System/exceptions/systemException/argumentException/: ArgumentNullException.cpp  ArgumentNullException.h  ArgumentOutOfRangeException.cpp  ArgumentOutOfRangeException.h
Lib/System/internal/: Boxing.h
Lib/System/templates/: Boxing.h  asis.h
Lib/System/templates/internal/: Boxing.h  TypeRefs.h  TypeTraits.h
Lib/boost/win/: CMakeLists.txt
Mono.Cecil/: Mono.Cecil.csproj
NRefactory/: README
SharpTreeView/: ICSharpCode.TreeView.csproj
Tests/001.for/Output/: CMakeLists.txt  Program.cpp  Program.h  main.cpp
Tests/001.for/Output/System/: CMakeLists.txt  Console.cpp  GC.cpp  String.cpp  String.h
Tests/001.for/Output/gcDebug/: gc-lib.lib  gcmt-dll.exp  gcmt-dll.lib
Tests/003.ForwardDeclaration/Output/: CMakeLists.txt  ClassA.cpp  ClassA.h  ClassB.h  Program.cpp  Program.h  main.cpp
Tests/003.ForwardDeclaration/Output/System/: Object.h
Tests/003.ForwardDeclaration/Output/System/Collections/: MyIterator.h
Tests/004.ForEach/Output/: CMakeLists.txt  Program.cpp  Program.h  main.cpp
Tests/004.ForEach/Output/System/: Console.cpp  Object.h  gcptr.h  support.h
Tests/005.Collections/Output/: CMakeLists.txt  MyEnumerator.cpp  MyEnumerator.h  MyList.cpp  MyList.h  Program.cpp  Program.h  main.cpp
Tests/005.Collections/Output/System/: String.h
Tests/005.PropertyConstructor/Output/: A.cpp  A.h  CMakeLists.txt  main.cpp
Tests/005.PropertyConstructor/Output/System/: Console.h
Tests/005.PropertyConstructor/Output/System/Collections/: IEnumerable.h  IEnumeratorCXX.h
Tests/005.PropertyConstructor/Output/System/Collections/Generic/: CMakeLists.txt  IEnumerable.h  IEnumeratorCXX.h  List.h  MyIterator.h
Tests/Dev/Covariance/Output/: A_T.h  B_T.h  CMakeLists.txt  CovIEnumerable_T.h  CovIEnumerator_T.h  Program.cpp  Program.h  main.cpp
Tests/Dev/Covariance/Output/System/: Convert.cpp  String.cpp  System.h
Tests/Dev/Covariance/Output/System/Collections/Generic/: IEnumeratorCXX.h
Tests/Dev/Covariance/Output/System/IO/: FileAccess.h  FileStream.cpp  FileStream.h  StreamReaderCXX.cpp  TextReader.cpp  TextReader.h  TextWriter.cpp
Tests/Dev/CustomCollections/Output/: A.h  CMakeLists.txt  MyEnumerator_T.h  MyList_T.h  Program.cpp  Program.h  main.cpp
Tests/Dev/CustomCollections/Output/System/: Console.cpp  Console.h  gcptr.cpp  support.h
Tests/Dev/CustomCollections/Output/System/Collections/: IEnumerable.h
Tests/Dev/CustomCollections/Output/System/Collections/Generic/: IEnumerable.h  IteratorCXX.h
Tests/Dev/CustomCollections/Output/System/IO/: File.cpp  File.h  FileShare.h  StreamReaderCXX.cpp  StreamReaderCXX.h  StreamWriterCXX.h
Tests/Dev/CustomCollections/Output/gc/: CMakeLists.txt
Tests/ForEach/Output/: CMakeLists.txt
Tests/ForEach/Output/System/: System.h
Tests/ForEach/Output/System/Collections/: IEnumerable.h
borealis/: index.html
doxygen/: _amiga_o_s_8c.html  _amiga_o_s_8c.js  _amiga_o_s_8c__incl.map  _amiga_o_s_8c__incl.md5  _amiga_o_s_8c_a35e299c1577a51c6b5fb803620d0f7b5_icgraph.map  _amiga_o_s_8c_a35e299c1577a51c6b5fb803620d0f7b5_icgraph.md5  _amiga_o_s_8c_a7c1ecf244dbbc680b785e85392d3c2b6_cgraph.map  _amiga_o_s_8c_a7c1ecf244dbbc680b785e85392d3c2b6_cgraph.md5  _amiga_o_s_8c_a9c2c182d635df12cdc92efe09c8ee866_icgraph.map  _amiga_o_s_8c_a9c2c182d635df12cdc92efe09c8ee866_icgraph.md5  _amiga_o_s_8c_source.html  _argument_exception_8cpp.html  _argument_exception_8cpp__incl.map  _argument_exception_8cpp__incl.md5  _argument_exception_8cpp_source.html  _argument_exception_8h.html  _argument_exception_8h__dep__incl.map  _argument_exception_8h__dep__incl.md5  _argument_exception_8h__incl.map  _argument_exception_8h__incl.md5  _argument_exception_8h_source.html  _argument_null_exception_8cpp.html  (+3641 more)
(+1365 files in other folders)
