CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ForProj CXX)
ADD_SUBDIRECTORY(System)
ADD_SUBDIRECTORY(gc)
SET(EXECPATH Program.cpp Program.h main.cpp Program.cpp Program.h main.cpp)
ADD_EXECUTABLE(For ${EXECPATH})
TARGET_LINK_LIBRARIES(For System)
TARGET_LINK_LIBRARIES(For gc-lib)
TARGET_LINK_LIBRARIES(For System_Collections)
TARGET_LINK_LIBRARIES(For System_Collections_Generic)
IF(UNIX)
IF(!ANDROID)
TARGET_LINK_LIBRARIES(For pthread)
ENDIF()
ENDIF(UNIX)
