CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ForwardDeclarationProj CXX)
ADD_SUBDIRECTORY(System)
SET(EXECPATH Program.cpp Program.h main.cpp ClassA.cpp ClassA.h ClassB.cpp ClassB.h Program.cpp Program.h main.cpp ClassA.cpp ClassA.h ClassB.cpp ClassB.h)
ADD_EXECUTABLE(ForwardDeclaration ${EXECPATH})
TARGET_LINK_LIBRARIES(ForwardDeclaration LIB)
IF(UNIX)
IF(!ANDROID)
TARGET_LINK_LIBRARIES(ForwardDeclaration pthread)
ENDIF()
ENDIF(UNIX)
