CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ForEachProj CXX)
ADD_SUBDIRECTORY(System)
ADD_SUBDIRECTORY(gc)
SET(EXECPATH Program.cpp Program.h main.cpp Program.cpp Program.h main.cpp)
ADD_EXECUTABLE(ForEach ${EXECPATH})
TARGET_LINK_LIBRARIES(ForEach LIB)
TARGET_LINK_LIBRARIES(ForEach gc-lib)
IF(UNIX)
IF(!ANDROID)
TARGET_LINK_LIBRARIES(ForEach pthread)
ENDIF()
ENDIF(UNIX)
