CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(CollectionsExamplProj CXX)
ADD_SUBDIRECTORY(System)
ADD_SUBDIRECTORY(gc)
SET(EXECPATH Program.cpp Program.h main.cpp MyList.h MyEnumerator.h Program.cpp Program.h main.cpp MyList.h MyEnumerator.h)
ADD_EXECUTABLE(CollectionsExampl ${EXECPATH})
TARGET_LINK_LIBRARIES(CollectionsExampl LIB)
TARGET_LINK_LIBRARIES(CollectionsExampl gc-lib)
IF(UNIX)
IF(!ANDROID)
TARGET_LINK_LIBRARIES(CollectionsExampl pthread)
ENDIF()
ENDIF(UNIX)
