CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(PropertyConstructorProj CXX)
ADD_SUBDIRECTORY(System)
ADD_SUBDIRECTORY(gc)
SET(EXECPATH A.cpp A.h main.cpp A.cpp A.h main.cpp)
ADD_EXECUTABLE(PropertyConstructor ${EXECPATH})
TARGET_LINK_LIBRARIES(PropertyConstructor System)
TARGET_LINK_LIBRARIES(PropertyConstructor gc-lib)
TARGET_LINK_LIBRARIES(PropertyConstructor System_Collections)
TARGET_LINK_LIBRARIES(PropertyConstructor System_Collections_Generic)
IF(UNIX)
IF(!ANDROID)
TARGET_LINK_LIBRARIES(PropertyConstructor pthread)
ENDIF()
ENDIF(UNIX)
