CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ForEachProj CXX)
ADD_SUBDIRECTORY(System)
SET(EXECPATH Program.cpp Program.h main.cpp Program.cpp Program.h main.cpp)
ADD_EXECUTABLE(ForEach ${EXECPATH})
TARGET_LINK_LIBRARIES(ForEach LIB)
IF(UNIX)
IF(!ANDROID)
TARGET_LINK_LIBRARIES(ForEach pthread)
ENDIF()
ENDIF(UNIX)
