CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(CovarianceProj CXX)
SET_PROPERTY(GLOBAL PROPERTY EXT_LIB_PATH "C:/Users/Alex/Desktop/AlterNative/Tools/External Libraries")
ADD_SUBDIRECTORY(System)
ADD_SUBDIRECTORY(gc)
SET(EXECPATH Program.cpp Program.h main.cpp C.cpp C.h CovIEnumerable_T.h CovIEnumerator_T.h B_T.h A_T.h Program.cpp Program.h main.cpp C.cpp C.h CovIEnumerable_T.h CovIEnumerator_T.h B_T.h A_T.h)
ADD_EXECUTABLE(Covariance ${EXECPATH})
TARGET_LINK_LIBRARIES(Covariance System)
TARGET_LINK_LIBRARIES(Covariance gc-lib)
IF(UNIX)
IF(!ANDROID)
TARGET_LINK_LIBRARIES(Covariance pthread)
ENDIF()
ENDIF(UNIX)
