CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(CustomCollectionsProj CXX)
SET_PROPERTY(GLOBAL PROPERTY EXT_LIB_PATH "C:/Users/Alex/Desktop/AlterNative/Tools/External Libraries")
ADD_SUBDIRECTORY(System)
ADD_SUBDIRECTORY(gc)
SET(EXECPATH A.cpp A.h Program.cpp Program.h main.cpp MyList_T.h MyEnumerator_T.h A.cpp A.h Program.cpp Program.h main.cpp MyList_T.h MyEnumerator_T.h)
ADD_EXECUTABLE(CustomCollections ${EXECPATH})
TARGET_LINK_LIBRARIES(CustomCollections System)
TARGET_LINK_LIBRARIES(CustomCollections gc-lib)
IF(UNIX)
IF(!ANDROID)
TARGET_LINK_LIBRARIES(CustomCollections pthread)
ENDIF()
ENDIF(UNIX)
